--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ html(lang='en')
       title P_Rex WikiSearch
       link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css', rel='stylesheet', type='text/css')
       link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', rel='stylesheet', type='text/css')
-      link(href='https://fonts.googleapis.com/css?family=Merriweather', rel='stylesheet', type='text/css')
+      link(href='https://fonts.googleapis.com/css?family=Lato', rel='stylesheet', type='text/css')
       link(href='https://fonts.googleapis.com/css?family=Playfair+Display', rel='stylesheet', type='text/css')
       link(href='https://fonts.googleapis.com/css?family=Londrina+Solid', rel='stylesheet', type='text/css')
       link(href='css/style.css', rel='stylesheet', type='text/css')
@@ -42,6 +42,9 @@ html(lang='en')
       script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js', type='text/javascript')
       script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-sanitize.min.js', type='text/javascript')
       script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-animate.min.js', type='text/javascript')
+      script(src='app/wikiSearchApp.js', type='text/javascript')
+      script(src='app/wikiSearchCtrl.js', type='text/javascript')
+      script(src='app/wikiSearchService.js', type='text/javascript')
 
 
 
